Archived status state changes moved up to top level component so they can be accessed by all child components. CSS fixes to modal window so it doesn't always appear at top of screen, sometimes out of view.

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -169,7 +169,7 @@ button#archive {
 }
 
 #global-modal, #global-modal-background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -182,10 +182,15 @@ button#archive {
   opacity: 0.9;
 }
 
+#global-modal {
+  overflow: scroll;
+}
+
 #global-modal-box {
   width: 800px;
   margin: auto;
-  margin-top: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   -webkit-box-shadow: 0px 2px 7px -2px rgba(0,0,0,0.1);
   -moz-box-shadow: 0px 2px 7px -2px rgba(0,0,0,0.1);
   box-shadow: 0px 2px 7px -2px rgba(0,0,0,0.1);
